Subo api con token falta ver problema CORS cordova

--- a/.env
+++ b/.env
@@ -5,8 +5,7 @@
 */
 
 // Variables para conectarse al MongoAtlas y key para el token
-module.exports = {
-    key: 'govago',
-    atlasUsername: 'admin',
-    atlasPassword: 'govago'
-}
+    KEY=govago
+    ATLASUSERNAME=admin
+    ATLASPASSWORD=govago
+    SECRETO=secret
