--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Api proyecto intercruises",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,20 @@
   },
   "homepage": "https://github.com/HeraWer/gvg_api#readme",
   "dependencies": {
+    "assert": "^2.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.4"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.4",
+    "mongoose-file": "0.0.2",
+    "mongoose-gridfs": "^1.2.32",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.2",
+    "path": "^0.12.7"
   }
 }
