--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HeraWer/gvg_api#readme",
   "dependencies": {
     "assert": "^2.0.0",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -29,11 +30,12 @@
     "method-override": "^3.0.0",
     "mongo": "^0.1.0",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.6",
+    "mongoose": "^5.9.7",
     "mongoose-file": "0.0.2",
-    "mongoose-gridfs": "^1.2.32",
+    "mongoose-gridfs": "^1.2.34",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
+    "nodemon": "^2.0.2",
     "path": "^0.12.7"
   }
 }
