--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.9",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-file": "0.0.2",
     "mongoose-gridfs": "^1.2.34",
     "multer": "^1.4.2",
